--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <footer>
           <div class="author">
             <img
-              src="/image.jpg"
+              src="image.jpg"
               alt="img"
             />
 
@@ -36,24 +36,24 @@
             </div>
           </div>
           <div class="arrow">
-            <img src="/icon-share.svg" alt="share" />
+            <img src="icon-share.svg" alt="share" />
           </div>
           <div class="share">
             <p>share</p>
             <ul>
               <li>
                 <a href="#">
-                  <img src="/icon-facebook.svg" alt="facebook icon" />
+                  <img src="icon-facebook.svg" alt="facebook icon" />
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="/icon-twitter.svg" alt="facebook icon" />
+                  <img src="icon-twitter.svg" alt="facebook icon" />
                 </a>
               </li>
               <li>
                 <a href="#"
-                  ><img src="/icon-pinterest.svg" alt="facebook icon"
+                  ><img src="icon-pinterest.svg" alt="facebook icon"
                 /></a>
               </li>
             </ul>
@@ -61,13 +61,7 @@
         </footer>
       </section>
     </main>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by
-      <a href="https://codepen.io/emestabillo/">Emmilie Estabillo</a>.
-    </div>
+   
     <script src="/script.js"></script>
   </body>
 </html>
